Clean up card content in index.html
Removed content from card and kept link.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
 <div class="card">
-    <div class="card-icon">🎫</div>
-    <h3>優惠代碼配置生成器</h3>
-    <p>支援多組 Code 歸類與自動 JSON 格式化，可快速產生 IAP 原價及優惠方案設定檔。</p>
-    <a href="Discount.html" class="btn">開始使用</a>
+    <a href="Discount.html" class="btn"></a>
 </div>
