--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
-<div class="card">
-    <a href="Discount.html" class="btn"></a>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url=Discount.html">
+    
+    <script type="text/javascript">
+        // 2. 備份跳轉：防止瀏覽器禁用了 meta 重新整理
+        window.location.href = "Discount.html";
+    </script>
+    
+    <title>跳轉中...</title>
+</head>
+<body>
+    <p>正在為您開啟優惠代碼配置生成器，請稍候...</p>
+    <p>如果頁面沒有自動跳轉，請 <a href="Discount.html">點擊此處直接進入</a>。</p>
+</body>
+</html>
